# gtree_experiments

./: Cargo.toml  README.md  stats.txt
bench_result_1_vs_32/report/: index.html
bench_result_1_vs_32/search/10/report/: index.html
bench_result_1_vs_32/search/1000/report/: index.html
bench_result_1_vs_32/search/1024/report/: index.html
bench_result_1_vs_32/search/128/report/: index.html
bench_result_1_vs_32/search/16384/report/: index.html
bench_result_1_vs_32/search/2000/report/: index.html
bench_result_1_vs_32/search/2048/report/: index.html
bench_result_1_vs_32/search/256/report/: index.html
bench_result_1_vs_32/search/32768/report/: index.html
bench_result_1_vs_32/search/4096/report/: index.html
bench_result_1_vs_32/search/512/report/: index.html
bench_result_1_vs_32/search/65536/report/: index.html
bench_result_1_vs_32/search/8192/report/: index.html
bench_result_1_vs_32/search/report/: index.html
bench_result_1_vs_32/search/search 16-zip/report/: index.html
bench_result_1_vs_32/search/search 2-zip/report/: index.html
bench_result_1_vs_32/search/search 512-zip/report/: index.html
bench_result_1_vs_32/search/search 8-zip/report/: index.html
bench_results_many/report/: index.html
bench_results_many/search/100/report/: index.html
bench_results_many/search/1024/report/: index.html
bench_results_many/search/128/report/: index.html
bench_results_many/search/report/: index.html
benches/: search.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: gtree.rs  join.rs  klist.rs  search.rs  split.rs
src/: klist.rs  lib.rs  stats.rs
(+663 files in other folders)
