[package]
name = "gtree_experiments"
version = "0.1.0"
edition = "2021"

[dependencies]
arbitrary = { version = "1.0.2", features = ["derive"]}
rand = "0.8.5"
rand_distr = "0.4.3"

[dev-dependencies]
criterion = "0.5"
# hmac-sha256 = "1.1.7"

[[bin]]
name = "stats"
path = "src/stats.rs"

[[bin]]
name = "zipheight"
path = "src/zipheight.rs"

[[bench]]
name = "search"
harness = false
